[gd_scene load_steps=37 format=3 uid="uid://but0lfvja3v5s"]

[ext_resource type="Script" uid="uid://pv3up5x3xdif" path="res://assets/scripts/tank.gd" id="1_tv66d"]
[ext_resource type="Texture2D" uid="uid://cruvdahrku88g" path="res://assets/sprites/UMBT(ChassisDriving).png" id="2_67lw7"]
[ext_resource type="Texture2D" uid="uid://bfrf4wc2xil4m" path="res://assets/sprites/UMBT(Turret).png" id="3_5skhf"]
[ext_resource type="Texture2D" uid="uid://dbv3iakt8odjj" path="res://assets/sprites/UMBTBarrel.png" id="3_btxeo"]
[ext_resource type="AudioStream" uid="uid://bwfghuc2cdgmh" path="res://assets/sounds/engine_heavy_loop.wav" id="3_eids8"]
[ext_resource type="Texture2D" uid="uid://ceh4jhod2v5cb" path="res://assets/sprites/UMBTMinigunTurret.png" id="4_5skhf"]
[ext_resource type="AudioStream" uid="uid://cmpwdg3jck853" path="res://assets/sounds/fan_interval.wav" id="4_ms1bw"]
[ext_resource type="Texture2D" uid="uid://cjjo4nnq5xhhe" path="res://assets/sprites/UMBT(MinigunEffects).png" id="5_sx7uf"]
[ext_resource type="Texture2D" uid="uid://cucpy0kcog431" path="res://assets/sprites/UMBT(CannonEffects).png" id="6_e7eja"]
[ext_resource type="AudioStream" uid="uid://csuo72dtxldsk" path="res://assets/sounds/MinigunFireLoop.mp3" id="6_pa5dk"]
[ext_resource type="AudioStream" uid="uid://2jshv4te8cg4" path="res://assets/sounds/TankGun.wav" id="6_vu3nq"]
[ext_resource type="AudioStream" uid="uid://pfjdfxxhaiwp" path="res://assets/sounds/MinigunSpoolUp.mp3" id="7_kwnc1"]
[ext_resource type="AudioStream" uid="uid://csovxky1gkjly" path="res://assets/sounds/MinigunSpoolDown.mp3" id="8_yyigf"]
[ext_resource type="Script" uid="uid://yehcmi33gwa5" path="res://assets/scripts/player_camera.gd" id="12_civsa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jg8oe"]
atlas = ExtResource("2_67lw7")
region = Rect2(0, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_btxeo"]
atlas = ExtResource("2_67lw7")
region = Rect2(0, 2560, 2560, 2560)

[sub_resource type="SpriteFrames" id="SpriteFrames_5skhf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg8oe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btxeo")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e7eja"]
atlas = ExtResource("3_5skhf")
region = Rect2(0, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_vu3nq"]
atlas = ExtResource("3_5skhf")
region = Rect2(2560, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_sx7uf"]
atlas = ExtResource("3_5skhf")
region = Rect2(0, 2560, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa5dk"]
atlas = ExtResource("3_5skhf")
region = Rect2(2560, 2560, 2560, 2560)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwnc1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7eja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vu3nq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx7uf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa5dk")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_r26ri"]
atlas = ExtResource("5_sx7uf")
region = Rect2(320, 320, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0grtl"]
atlas = ExtResource("5_sx7uf")
region = Rect2(0, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j62p"]
atlas = ExtResource("5_sx7uf")
region = Rect2(320, 0, 320, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp6fy"]
atlas = ExtResource("5_sx7uf")
region = Rect2(0, 320, 320, 320)

[sub_resource type="SpriteFrames" id="SpriteFrames_ikd1v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r26ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0grtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j62p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp6fy")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_kwnc1"]
atlas = ExtResource("6_e7eja")
region = Rect2(2560, 5120, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyigf"]
atlas = ExtResource("6_e7eja")
region = Rect2(0, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_civsa"]
atlas = ExtResource("6_e7eja")
region = Rect2(2560, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4pjp"]
atlas = ExtResource("6_e7eja")
region = Rect2(5120, 0, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fex3"]
atlas = ExtResource("6_e7eja")
region = Rect2(0, 2560, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_j08vc"]
atlas = ExtResource("6_e7eja")
region = Rect2(2560, 2560, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgxjb"]
atlas = ExtResource("6_e7eja")
region = Rect2(5120, 2560, 2560, 2560)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1ti1"]
atlas = ExtResource("6_e7eja")
region = Rect2(0, 5120, 2560, 2560)

[sub_resource type="SpriteFrames" id="SpriteFrames_r26ri"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwnc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyigf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_civsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4pjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fex3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j08vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgxjb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1ti1")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_tv66d")

[node name="Chassis" type="AnimatedSprite2D" parent="."]
z_index = -2
position = Vector2(-420, 0)
sprite_frames = SubResource("SpriteFrames_5skhf")
frame = 1
frame_progress = 0.492224
speed_scale = 2.0

[node name="Turret" type="AnimatedSprite2D" parent="."]
z_index = -2
position = Vector2(-180, 0)
sprite_frames = SubResource("SpriteFrames_kwnc1")
offset = Vector2(-240, 0)

[node name="Minigun" type="Sprite2D" parent="Turret"]
z_index = -3
position = Vector2(95, -215)
rotation = 3.14159
texture = ExtResource("4_5skhf")
offset = Vector2(335, -215)
flip_h = true
flip_v = true

[node name="MinigunMuzzleFlash" type="AnimatedSprite2D" parent="Turret/Minigun"]
z_index = 1
position = Vector2(225, 5.00057)
sprite_frames = SubResource("SpriteFrames_ikd1v")
flip_h = true
flip_v = true

[node name="MinigunMuzzle" type="Marker2D" parent="Turret/Minigun"]
position = Vector2(430, 5.00109)

[node name="MinigunFireSound" type="AudioStreamPlayer2D" parent="Turret/Minigun"]
stream = ExtResource("6_pa5dk")
pitch_scale = 2.0

[node name="MinigunSpoolUp" type="AudioStreamPlayer2D" parent="Turret/Minigun"]
stream = ExtResource("7_kwnc1")

[node name="MinigunSpoolDown" type="AudioStreamPlayer2D" parent="Turret/Minigun"]
stream = ExtResource("8_yyigf")

[node name="Cannon" type="Sprite2D" parent="Turret"]
z_index = -3
position = Vector2(-240, -45)
rotation = 3.14159
texture = ExtResource("3_btxeo")
offset = Vector2(0, -45)
flip_h = true
flip_v = true

[node name="CannonMuzzleFlash" type="AnimatedSprite2D" parent="Turret/Cannon"]
position = Vector2(680, 1.00172)
rotation = -3.14159
sprite_frames = SubResource("SpriteFrames_r26ri")
offset = Vector2(680, 45)

[node name="125mmMuzzle" type="Marker2D" parent="Turret/Cannon"]
position = Vector2(723, 0.00183294)

[node name="GunSound" type="AudioStreamPlayer2D" parent="Turret/Cannon"]
position = Vector2(723, 0.00183868)
stream = ExtResource("6_vu3nq")

[node name="GTGMLaunchBay" type="Marker2D" parent="Turret"]
position = Vector2(405, -70)

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-451, -95, -231, -135, -132, -143, -142, -304, -75, -304, 4, -144, 206, -189, 244, -272, 289, -190, 504, -184, 555, -299, 599, -200, 473, -139, 486, 13, 848, 0, 848, 159, 641, 313, -498, 309, -726, 160, -716, 110, -448, 26)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-852, -707)
zoom = Vector2(0.3, 0.3)
position_smoothing_enabled = true
script = ExtResource("12_civsa")

[node name="WeaponDisplay" type="RichTextLabel" parent="Camera2D"]
offset_left = -623.0
offset_top = -640.0
offset_right = -173.0
offset_bottom = -517.0
scale = Vector2(3.73705, 3.99272)
text = "Weapon: Cannon
"
fit_content = true

[node name="Health" type="RichTextLabel" parent="Camera2D"]
offset_left = -623.0
offset_top = -551.0
offset_right = -173.0
offset_bottom = -428.0
scale = Vector2(3.73705, 3.99272)
text = "Health: 5000


"
fit_content = true

[node name="Ammo" type="RichTextLabel" parent="Camera2D"]
offset_left = -623.0
offset_top = -465.0
offset_right = -173.0
offset_bottom = -342.0
scale = Vector2(3.73705, 3.99272)
text = "Cannon Ammo: 100



"
fit_content = true

[node name="Score" type="RichTextLabel" parent="Camera2D"]
offset_left = -623.0
offset_top = -381.0
offset_right = -173.0
offset_bottom = -258.0
scale = Vector2(3.73705, 3.99272)
text = "Score: 0





"
fit_content = true

[node name="EngineIdleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_eids8")

[node name="EngineDrivingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ms1bw")
pitch_scale = 0.5
